--- a/src/main/resources/templates/form-porra.html
+++ b/src/main/resources/templates/form-porra.html
@@ -76,7 +76,7 @@
       <div class="col-md-4 inputGroupContainer">
       <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-      <input  name="porra_name" placeholder="Nombre" class="form-control"  type="text" th:field="*{nombre}">
+      <input  name="porra_name" placeholder="Nombre" class="form-control"  type="text" th:field="*{nombre}" required>
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
       <label class="col-md-4 control-label" >Descripción</label> 
         <div class="col-md-4 inputGroupContainer">
         <div class="input-group">
-      <textarea class="form-group" name="" id="Descripción" placeholder="En que consiste..." rows="3" th:field="*{descripcion}"></textarea>
+      <textarea class="form-group" name="" id="Descripción"  placeholder="En que consiste..." rows="3" th:field="*{descripcion}" required ></textarea>
         </div>
       </div>
     </div>
@@ -98,7 +98,7 @@
       <div class="col-md-4 inputGroupContainer">
       <div class="input-group">
       <span class="input-group-addon"><i class="bi bi-shield-shaded"></i></span>
-      <input  name="e_local" placeholder="equipo local" class="form-control"  type="text" th:field="*{equipoLocal}">
+      <input  name="e_local" placeholder="equipo local" class="form-control"  type="text" th:field="*{equipoLocal}"required>
         </div>
       </div>
     </div>  
@@ -110,7 +110,7 @@
       <div class="col-md-4 inputGroupContainer">
       <div class="input-group">
       <span class="input-group-addon"><i class="bi bi-shield-shaded"></i></span>
-      <input  name="e_visitante" placeholder="equipo visitante" class="form-control"  type="text" th:field="*{equipoVisitante}">
+      <input  name="e_visitante" placeholder="equipo visitante" class="form-control"  type="text" th:field="*{equipoVisitante}" required>
         </div>
       </div>
     </div>
